--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
 	   <profile>
 		<id>openshift</id>
 		<build>
-		    <finalName>{APP_NAME}</finalName>
+		    <finalName>CLINICA</finalName>
 		    <plugins>
 			<plugin>
 			    <artifactId>maven-war-plugin</artifactId>
