--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.3</version>
-		</dependency>
+			</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
 		<dependency>
@@ -54,8 +53,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
-		</dependency>
+			</dependency>
         
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,11 +77,6 @@
 			<version>1.7.3</version>
 		</dependency>
         
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
@@ -122,7 +115,7 @@
 			<version>1.3.200-v20130910-1609</version>
 			<type>jar</type>
 		</dependency>
-	 
+
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
@@ -200,6 +193,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+   		 	<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+  		</dependency>
+	
 		
 	</dependencies>
 
@@ -209,6 +208,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+        			<mainClass>br.uva.SpringBootApplicationInitializer</mainClass>
+    				<addResources>true</addResources>
+    			</configuration>
+				<executions>
+        			<execution>
+            			<goals>
+                			<goal>repackage</goal>
+            			</goals>
+       				</execution>
+    			</executions>
 			</plugin>
 		</plugins>
         
@@ -271,5 +281,5 @@
 		</build>
 	    </profile>
 	 </profiles>
-	
+
 </project>
